--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "izitoast": "^1.4.0",
     "vue": "^2.6.11",
     "vue-izitoast": "^1.2.1",
     "vue-router": "^3.2.0",
