--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^8.2.9",
     "izitoast": "^1.4.0",
+    "secure-ls": "^1.2.6",
     "vue": "^2.6.11",
+    "vue-country-code": "^1.1.1",
     "vue-izitoast": "^1.2.1",
+    "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
