--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-country-code": "^1.1.1",
     "vue-izitoast": "^1.2.1",
     "vue-loading-overlay": "^3.4.2",
+    "vue-paginate": "^3.6.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.0.0-beta.3"
