--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.2.9",
     "izitoast": "^1.4.0",
+    "moment": "^2.29.1",
     "secure-ls": "^1.2.6",
     "vue": "^2.6.11",
     "vue-country-code": "^1.1.1",
